fix: remove unnecessary styling These lunatics made every div a display: flex; align-items: center box

--- a/solid/src/root.css
+++ b/solid/src/root.css
@@ -41,11 +41,6 @@ fieldset {
   justify-content: space-around;
 }
 
-div {
-  display: flex;
-  align-items: center;
-}
-
 button {
   background: #d1d5db;
   border: none;
